# FastAPI-kafka

./: .coverage  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: .dockerignore  __init__.py  requirements.txt  run.py
src/Consumer_api/: __init__.py
src/Consumer_api/app/: __init__.py  config.py  dependencies.py  main.py
src/Consumer_api/app/routers/: consumer_router.py  v1.py  v2.py
src/Consumer_api/app/schemas/: __init__.py  registry.py
src/Consumer_api/app/services/: __init__.py  avro_consumer.py  consumer_factory.py  get_schema_registry_client.py  json_consumer.py  kafka_service.py  message_processor.py  protobuf_consumer.py
src/Consumer_api/app/test/: test_get_messager.py
src/Consumer_api/tests/:  test_consumer_integration.py  __init__.py  test_consumer.py  test_consumer_direct.py  test_consumer_versions.py  test_load.py
src/Consumer_mono/: main.py
src/Producer_api/app/: __init__.py  config.py  dependencies.py  main.py  main_old.py  producer.py  schemas.py  send_messages.py
src/Producer_api/app/routers/: __init__ .py  v1.py  (+2 more)
src/Producer_api/tests/: client-test.properties  requirements.txt  test_CORS.py  test_connect_kafka.py  test_connection.py  test_kafka_connectivity.py  test_producer.py  test_producer_direct.py  test_producer_integration.py  test_producer_old.py  test_producer_versions.py  test_producer_with_schema_registry.py  test_schema_registration.py  test_schema_registry.py  test_send_rs_messages.py  test_topic.py  test_v1.py  test_v2.py  topic_inspector.py
src/Producer_mono/: main.py  main_new.py  main_old.py
(+18 files in other folders)
